--- a/dev/index.css
+++ b/dev/index.css
@@ -18,11 +18,11 @@ body {
 
 @font-face {
   font-family: "Open Sans Regular";
-  src: url("https://commons.ul.com/gnaas/dev/fonts/OpenSans/OpenSans-Regular.eot?#iefix") format("embedded-opentype"), url("https://commons.ul.com/gnaas/dev/fonts/OpenSans/OpenSans-Regular.ttf") format("truetype"), url("https://commons.ul.com/gnaas/dev/fonts/OpenSans/OpenSans-Regular.woff") format("woff"); }
+  src: url("https://ulwebdev.github.io/gnaas-pub/dev/fonts/OpenSans/OpenSans-Regular.eot?#iefix") format("embedded-opentype"), url("https://ulwebdev.github.io/gnaas-pub/dev/fonts/OpenSans/OpenSans-Regular.ttf") format("truetype"), url("https://ulwebdev.github.io/gnaas-pub/dev/fonts/OpenSans/OpenSans-Regular.woff") format("woff"); }
 
 @font-face {
   font-family: "Open Sans Semibold";
-  src: url("https://commons.ul.com/gnaas/dev/fonts/OpenSans/OpenSans-Semibold.eot?#iefix") format("embedded-opentype"), url("https://commons.ul.com/gnaas/dev/fonts/OpenSans/OpenSans-Semibold.ttf") format("truetype"), url("https://commons.ul.com/gnaas/dev/fonts/OpenSans/OpenSans-Semibold.woff") format("woff"); }
+  src: url("https://ulwebdev.github.io/gnaas-pub/dev/fonts/OpenSans/OpenSans-Semibold.eot?#iefix") format("embedded-opentype"), url("https://ulwebdev.github.io/gnaas-pub/dev/fonts/OpenSans/OpenSans-Semibold.ttf") format("truetype"), url("https://ulwebdev.github.io/gnaas-pub/dev/fonts/OpenSans/OpenSans-Semibold.woff") format("woff"); }
 
 /**
  * TODO/bugfix:
@@ -30,7 +30,7 @@ body {
  */
 @font-face {
   font-family: icomoon;
-  src: url("https://commons.ul.com/gnaas/dev/fonts/icomoon/icomoon.ttf?fdh9g9") format("truetype"), url("https://commons.ul.com/gnaas/dev//fonts/icomoon/icomoon.ttf?fdh9g9") format("woff"), url("https://commons.ul.com/gnaas/dev//fonts/icomoon/icomoon.ttf?fdh9g9") format("svg");
+  src: url("https://ulwebdev.github.io/gnaas-pub/dev/fonts/icomoon/icomoon.ttf?fdh9g9") format("truetype"), url("https://ulwebdev.github.io/gnaas-pub/dev//fonts/icomoon/icomoon.ttf?fdh9g9") format("woff"), url("https://ulwebdev.github.io/gnaas-pub/dev//fonts/icomoon/icomoon.ttf?fdh9g9") format("svg");
   font-weight: normal;
   font-style: normal; }
 
@@ -99,11 +99,11 @@ body {
 
 @font-face {
   font-family: "Open Sans Regular";
-  src: url("https://commons.ul.com/gnaas/dev/fonts/OpenSans/OpenSans-Regular.eot?#iefix") format("embedded-opentype"), url("https://commons.ul.com/gnaas/dev/fonts/OpenSans/OpenSans-Regular.ttf") format("truetype"), url("https://commons.ul.com/gnaas/dev/fonts/OpenSans/OpenSans-Regular.woff") format("woff"); }
+  src: url("https://ulwebdev.github.io/gnaas-pub/dev/fonts/OpenSans/OpenSans-Regular.eot?#iefix") format("embedded-opentype"), url("https://ulwebdev.github.io/gnaas-pub/dev/fonts/OpenSans/OpenSans-Regular.ttf") format("truetype"), url("https://ulwebdev.github.io/gnaas-pub/dev/fonts/OpenSans/OpenSans-Regular.woff") format("woff"); }
 
 @font-face {
   font-family: "Open Sans Semibold";
-  src: url("https://commons.ul.com/gnaas/dev/fonts/OpenSans/OpenSans-Semibold.eot?#iefix") format("embedded-opentype"), url("https://commons.ul.com/gnaas/dev/fonts/OpenSans/OpenSans-Semibold.ttf") format("truetype"), url("https://commons.ul.com/gnaas/dev/fonts/OpenSans/OpenSans-Semibold.woff") format("woff"); }
+  src: url("https://ulwebdev.github.io/gnaas-pub/dev/fonts/OpenSans/OpenSans-Semibold.eot?#iefix") format("embedded-opentype"), url("https://ulwebdev.github.io/gnaas-pub/dev/fonts/OpenSans/OpenSans-Semibold.ttf") format("truetype"), url("https://ulwebdev.github.io/gnaas-pub/dev/fonts/OpenSans/OpenSans-Semibold.woff") format("woff"); }
 
 /**
  * TODO/bugfix:
@@ -111,7 +111,7 @@ body {
  */
 @font-face {
   font-family: icomoon;
-  src: url("https://commons.ul.com/gnaas/dev/fonts/icomoon/icomoon.ttf?fdh9g9") format("truetype"), url("https://commons.ul.com/gnaas/dev//fonts/icomoon/icomoon.ttf?fdh9g9") format("woff"), url("https://commons.ul.com/gnaas/dev//fonts/icomoon/icomoon.ttf?fdh9g9") format("svg");
+  src: url("https://ulwebdev.github.io/gnaas-pub/dev/fonts/icomoon/icomoon.ttf?fdh9g9") format("truetype"), url("https://ulwebdev.github.io/gnaas-pub/dev//fonts/icomoon/icomoon.ttf?fdh9g9") format("woff"), url("https://ulwebdev.github.io/gnaas-pub/dev//fonts/icomoon/icomoon.ttf?fdh9g9") format("svg");
   font-weight: normal;
   font-style: normal; }
 
@@ -409,11 +409,11 @@ body {
 
 @font-face {
   font-family: "Open Sans Regular";
-  src: url("https://commons.ul.com/gnaas/dev/fonts/OpenSans/OpenSans-Regular.eot?#iefix") format("embedded-opentype"), url("https://commons.ul.com/gnaas/dev/fonts/OpenSans/OpenSans-Regular.ttf") format("truetype"), url("https://commons.ul.com/gnaas/dev/fonts/OpenSans/OpenSans-Regular.woff") format("woff"); }
+  src: url("https://ulwebdev.github.io/gnaas-pub/dev/fonts/OpenSans/OpenSans-Regular.eot?#iefix") format("embedded-opentype"), url("https://ulwebdev.github.io/gnaas-pub/dev/fonts/OpenSans/OpenSans-Regular.ttf") format("truetype"), url("https://ulwebdev.github.io/gnaas-pub/dev/fonts/OpenSans/OpenSans-Regular.woff") format("woff"); }
 
 @font-face {
   font-family: "Open Sans Semibold";
-  src: url("https://commons.ul.com/gnaas/dev/fonts/OpenSans/OpenSans-Semibold.eot?#iefix") format("embedded-opentype"), url("https://commons.ul.com/gnaas/dev/fonts/OpenSans/OpenSans-Semibold.ttf") format("truetype"), url("https://commons.ul.com/gnaas/dev/fonts/OpenSans/OpenSans-Semibold.woff") format("woff"); }
+  src: url("https://ulwebdev.github.io/gnaas-pub/dev/fonts/OpenSans/OpenSans-Semibold.eot?#iefix") format("embedded-opentype"), url("https://ulwebdev.github.io/gnaas-pub/dev/fonts/OpenSans/OpenSans-Semibold.ttf") format("truetype"), url("https://ulwebdev.github.io/gnaas-pub/dev/fonts/OpenSans/OpenSans-Semibold.woff") format("woff"); }
 
 /**
  * TODO/bugfix:
@@ -421,7 +421,7 @@ body {
  */
 @font-face {
   font-family: icomoon;
-  src: url("https://commons.ul.com/gnaas/dev/fonts/icomoon/icomoon.ttf?fdh9g9") format("truetype"), url("https://commons.ul.com/gnaas/dev//fonts/icomoon/icomoon.ttf?fdh9g9") format("woff"), url("https://commons.ul.com/gnaas/dev//fonts/icomoon/icomoon.ttf?fdh9g9") format("svg");
+  src: url("https://ulwebdev.github.io/gnaas-pub/dev/fonts/icomoon/icomoon.ttf?fdh9g9") format("truetype"), url("https://ulwebdev.github.io/gnaas-pub/dev//fonts/icomoon/icomoon.ttf?fdh9g9") format("woff"), url("https://ulwebdev.github.io/gnaas-pub/dev//fonts/icomoon/icomoon.ttf?fdh9g9") format("svg");
   font-weight: normal;
   font-style: normal; }
 
